# rannc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.html  config.html  faq.html  genindex.html  index.html  installation.html  limitations.html  logging.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  setup.py  tutorial.html
_sources/: config.rst.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  limitations.rst.txt  logging.rst.txt  references.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
docker/ubuntu/: Makefile  make.sh
documents/: build.rst  conf.py  config.rst  faq.rst  index.rst  installation.rst  limitations.rst  logging.rst  tutorial.rst
examples/: tutorial.py
pyrannc/: __init__.py  comm_utils.py  dist_param.py  opt.py  tensor_coll.py  torch_version.py  utils.py  zero_param.py
pyrannc/amp/: __init__.py
pyrannc/opt/: util.py
singularity/: Dockerfile  build.sh  setup_singularity.sh  singularity_container.def
src/: Common.cpp  Common.h  Config.cpp  Config.h  ConfiguredTorch.h  Logging.cpp  Logging.h  main.cpp
src/bind/: PybindUtil.cpp  PybindUtil.h  RaNNCFactory.cpp  RaNNCFactory.h  RaNNCProcess.cpp  RaNNCProcess.h  Tracer.cpp  Tracer.h
src/comm/: AllReduceRunner.h  MPIAllReduceRunner.cpp  MPIUtil.cpp  MPIUtil.h  NCCLAllReduceRunner.cpp  NCCLWrapper.cpp  NCCLWrapper.h  ObjectComm.cpp  ObjectComm.h  SComm.cpp  SComm.h  SCommCommon.cpp  SCommCommon.h  SCommPrimitive.cpp  SCommPrimitive.h
src/comp/: Backward.cpp  Backward.h  BatchSizeCalculator.cpp  BatchSizeCalculator.h  DistributedGradLocator.cpp  DistributedGradLocator.h  DistributedParamLocator.cpp  DistributedParamLocator.h  DistributedParamLocatorBase.cpp  DistributedParamLocatorBase.h  EventRecorder.cpp  EventRecorder.h  FunctionStorage.cpp  FunctionStorage.h  GraphConnector.cpp  GraphConnector.h  GraphLauncher.cpp  GraphLauncher.h  GraphProfiler.cpp  GraphProfiler.h  GraphValueCache.cpp  GraphValueCache.h  GraphValueStorage.cpp  GraphValueStorage.h  KinetoWrapper.cpp  KinetoWrapper.h  NodeProfiler.cpp  NodeProfiler.h  OffloadedParamMap.cpp  OffloadedParamMap.h  ParamStorage.cpp  ParamStorage.h  PartitionTensor.cpp  PartitionTensor.h  RaNNCModule.cpp  RaNNCModule.h  SlicedParamLocator.cpp  SlicedParamLocator.h  TimeCounter.cpp  TimeCounter.h  (+4 more)
src/cpg/: CPG.cpp  CPG.h
src/cuda/: CudaSync.cpp  CudaSync.h  CudaUtil.cpp  CudaUtil.h
src/distop/: DistMatmul.cpp  DistMatmul.h  DistTaskDispatcher.cpp  DistTaskDispatcher.h  PartitionTensor.cpp  PartitionTensor.h
src/graph/: ConvertGraph.cpp  ConvertGraph.h  DPStaging.cpp  DPStaging.h  Decomposition.cpp  Decomposition.h  DeploymentSerializer.cpp  DeploymentSerializer.h  FairWeightDecomposer.cpp  FairWeightDecomposer.h  GuessValueTypes.cpp  GuessValueTypes.h  MLGraph.cpp  MLGraph.h  MLPartDecomposer.cpp  MLPartDecomposer.h  ManualDecomposer.cpp  ManualDecomposer.h  MetaDecomposer.cpp  MetaDecomposer.h  Partitioner.cpp  Partitioner.h  ProfiledWeightDecomposer.cpp  ProfiledWeightDecomposer.h  ProfilerUtil.cpp  ProfilerUtil.h  SchedulingDecomposer.cpp  SchedulingDecomposer.h  ir.cpp  ir.h
src/torch/: CustomOps.cpp  CustomOps.h  IValueLocation.cpp  IValueLocation.h  TorchDriver.cpp  TorchDriver.h  TorchEngine.h  TorchUtil.cpp  (+1 more)
test/: common.py  conftest.py  launch.sh  models.py  native_models.py  ompi_helper  sample.env  submit.sh  submit_tests_all.sh  test_bn.py  test_half_amp.py  test_half_loss_amp.py  test_half_loss_amp_layernorm.py  test_half_loss_amp_layernorm_save_zero.py  test_half_loss_amp_save.py  test_half_loss_amp_save_zero.py  test_native.py  test_simple.py  test_simple_amp.py  test_simple_bfloat16.py  test_simple_cpu.py  test_simple_no_gather.py  test_simple_zero.py
(+9 files in other folders)
